<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/number_button_color"
    tools:context=".Calculator">

    <LinearLayout
        android:id="@+id/Tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/textView_color"
        android:paddingLeft="@dimen/show_area_padding_left_right"
        android:paddingRight="@dimen/show_area_padding_left_right"
        android:paddingTop="@dimen/show_area_padding_top_bottom"
        android:paddingBottom="@dimen/show_area_padding_top_bottom">
        <TextView
            android:id="@+id/Tip"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textColor="@color/textView_text_color"
            android:typeface="monospace"
            android:textSize="@dimen/text_view_letter_size"
            android:visibility="invisible"
            android:gravity="right"/>
        <TextView
            android:id="@+id/Tip_show"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textSize="@dimen/text_view_number_size"
            android:typeface="monospace"
            android:textColor="@color/textView_text_color"
            android:text="0.00"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Total_layout"
        android:layout_below="@id/Tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/textView_color"
        android:paddingLeft="@dimen/show_area_padding_left_right"
        android:paddingRight="@dimen/show_area_padding_left_right"
        android:paddingTop="@dimen/show_area_padding_top_bottom"
        android:paddingBottom="@dimen/show_area_padding_top_bottom">
        <TextView
            android:id="@+id/Total"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/textView_text_color"
            android:typeface="monospace"
            android:textSize="@dimen/text_view_letter_size"
            android:visibility="invisible"
            android:gravity="right"/>
        <TextView
            android:id="@+id/Total_show"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textSize="@dimen/text_view_number_size"
            android:typeface="monospace"
            android:textColor="@color/textView_text_color"
            android:text="0.00"
            android:visibility="invisible"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/AA_layout"
        android:layout_below="@id/Total_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/textView_color"
        android:paddingLeft="@dimen/show_area_padding_left_right"
        android:paddingRight="@dimen/show_area_padding_left_right"
        android:paddingTop="@dimen/show_area_padding_top_bottom"
        android:paddingBottom="@dimen/show_area_padding_top_bottom">
        <TextView
            android:id="@+id/AA"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/AA"
            android:textColor="@color/textView_text_color"
            android:typeface="monospace"
            android:textSize="@dimen/text_view_letter_size"
            android:visibility="invisible"
            android:gravity="right"/>
        <TextView
            android:id="@+id/AA_show"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textSize="@dimen/text_view_number_size"
            android:typeface="monospace"
            android:textColor="@color/textView_text_color"
            android:text="0.00"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_groups"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/tip_rate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@color/radio_color"
            android:paddingLeft="10dp"
            android:paddingTop="@dimen/radiogroup_top_bottom"
            android:paddingBottom="@dimen/radiogroup_top_bottom">
            <RadioButton
                android:id="@+id/tip_rate_0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0%"
                android:paddingLeft="5dp"
                android:textColor="@color/radio_text_color"
                android:paddingRight="5dp"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/tip_rate_16"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_rate_16"
                android:paddingLeft="5dp"
                android:textColor="@color/radio_text_color"
                android:paddingRight="5dp"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/tip_rate_19"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_rate_19"
                android:paddingLeft="5dp"
                android:textColor="@color/radio_text_color"
                android:paddingRight="5dp"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/tip_rate_22"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_rate_22"
                android:paddingLeft="5dp"
                android:textColor="@color/radio_text_color"
                android:paddingRight="5dp"
                android:typeface="monospace"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/number_of_people"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@color/radio_color"
            android:paddingLeft="10dp"
            android:paddingTop="@dimen/radiogroup_top_bottom"
            android:paddingBottom="@dimen/radiogroup_top_bottom">
            <RadioButton
                android:id="@+id/people2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_text_color"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="2"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/people3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_text_color"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="3"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/people4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_text_color"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="4"
                android:typeface="monospace"/>
            <RadioButton
                android:id="@+id/people5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_text_color"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="5"
                android:typeface="monospace"/>
        </RadioGroup>
    </LinearLayout>


    <GridLayout
        android:id="@+id/number_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/radio_groups"
        android:columnCount="3"
        android:rowCount="4"
        android:paddingTop="2dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/number_button_width"
            android:text="1"
            android:textColor="@color/number_button_text_color"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"

            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number2"
            android:layout_width="wrap_content"
            android:width="@dimen/number_button_width"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="2"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/number_button_width"
            android:text="3"
            android:textSize="@dimen/number_button_text_size"
            android:textColor="@color/number_button_text_color"
            android:typeface="monospace"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="@dimen/number_button_text_size"
            android:textColor="@color/number_button_text_color"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="5"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="6"
            android:textSize="@dimen/number_button_text_size"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="7"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="8"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="9"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#29551d"
            android:text="C"
            android:textSize="@dimen/number_button_text_size"
            android:layout_gravity="fill_horizontal"
            android:width="@dimen/number_button_width"
            android:typeface="monospace"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/number0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_button_text_color"
            android:text="0"
            android:textSize="@dimen/number_button_text_size"
            android:typeface="monospace"
            android:width="@dimen/number_button_width"
            android:background="@drawable/button_selector"/>
    </GridLayout>

    <TextView
        android:id="@+id/Bill_show"
        android:layout_above="@id/number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="@dimen/number_button_text_size"
        android:paddingBottom="3dp"
        android:typeface="monospace"
        android:text="0.00"
        android:visibility="invisible"/>

</RelativeLayout>
